@@ -8,5 +8,6 @@ Arthur van Hoff
 Berk D. Demir
 Guo Sijie
 Jonathan Payne
+Michael Rose
 Michael Stack
 Shrijeet Paliwal
